--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,30 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'CatanKey'
+            keyPassword 'toiitpb04'
+            storeFile file('/Users/mmandal/.keystore/android.jks')
+            storePassword 'toiitpb04'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "com.mmandal.catanhelper"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
         versionName "1.0"
+        versionCode 3
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
